chore(raven,eagle): edit ssh command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,10 +81,10 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh_key
           chmod 600 ssh_key
           
-          ssh_command="mkdir -p ./gate/deploy && \
-          scp -o StrictHostKeyChecking=no -i ssh_key deploy/docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }}:./gate/deploy && \
-          cd ./gate/deploy"
-    
+          ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }} "mkdir -p ./gate/deploy"
+          scp -i ssh_key deploy/docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_ADDRESS }}:./gate/deploy
+
+          ssh_command=""
           for service in "${services_array[@]}"; do
           ssh_command+=" && VERSION=${version} docker-compose -f docker-compose.yml up -d ${service}"
           done
