--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   nats:
-    image: nats:latest
+    image: docker.iranserver.com/nats:latest
     container_name: nats-server
     ports:
       - "4222:4222" # Port for client connections
@@ -19,7 +19,7 @@ services:
 
   postgres:
     container_name: postgres
-    image: postgres:15
+    image: docker.iranserver.com/postgres:17
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
@@ -32,7 +32,7 @@ services:
 
   redis:
     container_name: redis
-    image: bitnami/redis:latest
+    image: docker.iranserver.com/bitnami/redis:latest
     command: redis-server --requirepass ${REDIS_PASSWORD}
     environment:
       - ALLOW_EMPTY_PASSWORD=no
@@ -46,7 +46,7 @@ services:
 
   rabbitmq:
     container_name: rabbitmq
-    image: rabbitmq:3.8-management
+    image: docker.iranserver.com/rabbitmq:3.8-management
     environment:
       - RABBITMQ_ERLANG_COOKIE=SWQOKODSQALRPCLNMEQG
       - RABBITMQ_DEFAULT_USER=${RABBITMQ_USERNAME}
